--- a/notebooks/eda_student.ipynb
+++ b/notebooks/eda_student.ipynb
@@ -755,10 +755,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ocema\\OneDrive\\Desktop\\DS_projects\\notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
   },
   {
    "cell_type": "code",
